--- a/wiki/fr/TechDraw_ExtensionCircleCenterLines.html
+++ b/wiki/fr/TechDraw_ExtensionCircleCenterLines.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCircleCenterLines/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCircleCenterLines&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionCircleCenterLines.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungKreismittellinien (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCircleCenterLines.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCircleCenterLines (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCircleCenterLines.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linee centrali Cerchio (78% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionCircleCenterLines.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj o&#347; otworu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ExtensionCircleCenterLines.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1086;&#1089;&#1077;&#1074;&#1099;&#1077; &#1083;&#1080;&#1085;&#1080;&#1080; &#1082; &#1086;&#1082;&#1088;&#1091;&#1078;&#1085;&#1086;&#1089;&#1090;&#1080;" (33% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
@@ -62,14 +62,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez sp&eacute;cifier les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez un ou plusieurs cercles ou arcs.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCircleCenterLines.svg&amp;filetimestamp=20241126213022&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCircleCenterLines.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Axes de centrage</a></span>.</li>
-<li>S&eacute;lectionnez le <b>TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCircleCenterLines.svg&amp;filetimestamp=20241126213022&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCircleCenterLines.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axes de centrage</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCircleCenterLines.svg&amp;filetimestamp=20241126213022&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCircleCenterLines.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axes de centrage</b> du menu.</li></ul></li>
 <li>Les axes de centrage sont ajout&eacute;es &agrave; chaque cercle et arc.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -117,34 +115,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118101314
+Cached time: 20260118101505
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.108 seconds
-Preprocessor visited node count: 348/1000000
+CPU time usage: 0.081 seconds
+Real time usage: 0.118 seconds
+Preprocessor visited node count: 347/1000000
 Post&#8208;expand include size: 25764/2097152 bytes
 Template argument size: 10162/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1786/5000000 bytes
+Unstrip post&#8208;expand size: 1790/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.656      1 -total
- 28.93%    5.976      1 Template:TechDraw_Tools_navi/fr
- 21.17%    4.374      2 Template:Navigation_menu_2
- 18.67%    3.857      1 Template:GuiCommand/fr
- 17.55%    3.625      1 Template:Userdocnavi/fr
-  9.62%    1.987      2 Template:Docnav/fr
-  8.05%    1.663      1 Template:Caption
-  7.51%    1.551      1 Template:Button
-  7.10%    1.466      1 Template:MenuCommand
+100.00%   26.435      1 -total
+ 38.42%   10.156      1 Template:TechDraw_Tools_navi/fr
+ 29.98%    7.924      2 Template:Navigation_menu_2
+ 23.65%    6.252      1 Template:Userdocnavi/fr
+  8.82%    2.331      1 Template:GuiCommand/fr
+  8.63%    2.282      2 Template:Docnav/fr
+  6.24%    1.650      1 Template:Caption
+  6.17%    1.632      1 Template:MenuCommand
+  5.37%    1.420      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267340-0!canonical and timestamp 20260118101313 and revision id 1740142. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267340-0!canonical and timestamp 20260118101505 and revision id 1740148. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
