Created page with "[[Image:Workbench_Sketcher.svg|thumb|128px|Ikona pracovní plochy Sketcher]]"

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -31,9 +31,7 @@
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<figure typeof="mw:File/Thumb"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Sketcher workbench icon</figcaption></figure>
-</div>
+<figure typeof="mw:File/Thumb"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Ikona pracovn&iacute; plochy Sketcher</figcaption></figure>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p><span id="Introduction"></span>
 </p>
@@ -863,13 +861,13 @@ Obecn&#283; jsou 2D konstrukce zam&yacute;&scaron;leny jako startovn&iacute; bod
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118101405
+Cached time: 20260118101548
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.412 seconds
-Real time usage: 0.508 seconds
-Preprocessor visited node count: 1569/1000000
+CPU time usage: 0.417 seconds
+Real time usage: 0.585 seconds
+Preprocessor visited node count: 1568/1000000
 Post&#8208;expand include size: 34317/2097152 bytes
 Template argument size: 9744/2097152 bytes
 Highest expansion depth: 7/100
@@ -879,19 +877,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.472      1 -total
- 20.84%    7.393      1 Template:Sketcher_Tools_navi/cs
- 13.74%    4.872      2 Template:Navigation_menu_2
- 12.53%    4.443      1 Template:PropertyView
- 11.27%    3.998      1 Template:Userdocnavi/cs
-  8.27%    2.934      1 Template:Variable
-  8.08%    2.865      5 Template:Caption
-  7.81%    2.772      5 Template:MenuCommand
-  7.44%    2.638     35 Template:Version
-  6.34%    2.250      1 Template:TOCright
+100.00%   37.271      1 -total
+ 21.08%    7.855      1 Template:Sketcher_Tools_navi/cs
+ 12.88%    4.799      2 Template:Navigation_menu_2
+ 12.61%    4.701      1 Template:Userdocnavi/cs
+ 10.16%    3.787      1 Template:PropertyView
+  8.42%    3.139      2 Template:Docnav
+  6.65%    2.480     35 Template:Version
+  6.65%    2.478      5 Template:Caption
+  6.22%    2.318      5 Template:MenuCommand
+  6.03%    2.249     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118101404 and revision id 1740146. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118101547 and revision id 1740150. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
