--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -36,11 +36,8 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
-<div class="mw-translate-fuzzy">
-<p><b>Pracovn&iacute; plocha Skic&aacute;&#345;</b> je pou&#382;&iacute;v&aacute;na pro vytv&aacute;&#345;en&iacute; 2D konstrukc&iacute; ur&#269;en&yacute;ch pro pou&#382;it&iacute; v  <b><a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">Pracovn&iacute; plo&scaron;e N&aacute;vrh d&iacute;lu</a></b> a dal&scaron;&iacute;ch pracovn&iacute;ch ploch&aacute;ch.
-Obecn&#283; jsou 2D konstrukce zam&yacute;&scaron;leny jako startovn&iacute; bod pro v&#283;t&scaron;inu CAD model&#367; - jednoduch&yacute; 2D n&aacute;&#269;rt m&#367;&#382;e b&yacute;t 'vysunut' do 3D tvaru, d&aacute;le mohou b&yacute;t 2D n&aacute;&#269;rty pou&#382;ity k vytv&aacute;&#345;en&iacute; kapes v povrchu objektu a n&aacute;&#269;rty mohou b&yacute;t vyu&#382;ity pro definov&aacute;n&iacute; 'desek' (vysunut&iacute;) na povrchu 3D objekt&#367;. Spolu s <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">logick&yacute;mi operacemi</a>, n&aacute;&#269;rt vytv&aacute;&#345;&iacute; j&aacute;dro generativn&iacute;ho n&aacute;vrhu d&iacute;lu t&#283;lesa.
+<p>Pomoc&iacute; <span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plochy Sketcher</a> Lze vytv&aacute;&#345;et 2D n&aacute;&#269;rtky ur&#269;en&eacute; pro pou&#382;it&iacute; v jin&yacute;ch pracovn&iacute;ch ploch&aacute;ch. 2D n&aacute;&#269;rtky jsou v&yacute;choz&iacute;m bodem pro mnoho CAD model&#367;. Obvykle definuj&iacute; profily a cesty pro operace k vytvo&#345;en&iacute; 3D tvar&#367;. Kone&#269;n&yacute; tvar modelu m&#367;&#382;e z&aacute;viset na n&#283;kolika n&aacute;&#269;rtc&iacute;ch.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Together with boolean operations defined in the <span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a>, the Sketcher Workbench, or "The Sketcher" for short, forms the basis of the <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">constructive solid geometry</a> (CSG) method of building solids. Together with <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a> operations, it also forms the basis of the <a href="../Feature_editing.html" title="Feature editing">feature editing</a> methodology of creating solids. But many other workbenches use sketches as well.
 </p>
@@ -861,13 +858,13 @@ Obecn&#283; jsou 2D konstrukce zam&yacute;&scaron;leny jako startovn&iacute; bod
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118101548
+Cached time: 20260118101738
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.417 seconds
-Real time usage: 0.585 seconds
-Preprocessor visited node count: 1568/1000000
+CPU time usage: 0.393 seconds
+Real time usage: 0.487 seconds
+Preprocessor visited node count: 1567/1000000
 Post&#8208;expand include size: 34317/2097152 bytes
 Template argument size: 9744/2097152 bytes
 Highest expansion depth: 7/100
@@ -877,19 +874,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.271      1 -total
- 21.08%    7.855      1 Template:Sketcher_Tools_navi/cs
- 12.88%    4.799      2 Template:Navigation_menu_2
- 12.61%    4.701      1 Template:Userdocnavi/cs
- 10.16%    3.787      1 Template:PropertyView
-  8.42%    3.139      2 Template:Docnav
-  6.65%    2.480     35 Template:Version
-  6.65%    2.478      5 Template:Caption
-  6.22%    2.318      5 Template:MenuCommand
-  6.03%    2.249     14 Template:KEY
+100.00%   47.202      1 -total
+ 22.35%   10.552      1 Template:Sketcher_Tools_navi/cs
+ 12.23%    5.775      2 Template:Navigation_menu_2
+ 10.72%    5.058      1 Template:Userdocnavi/cs
+ 10.45%    4.931      5 Template:Caption
+  9.89%    4.667      1 Template:PropertyView
+  7.63%    3.600     35 Template:Version
+  6.03%    2.845      8 Template:VersionPlus
+  5.53%    2.610     14 Template:KEY
+  5.51%    2.601      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118101547 and revision id 1740150. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118101737 and revision id 1740152. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
