Updated page TechDraw ExtensionHoleCircle/fr

--- a/wiki/fr/TechDraw_ExtensionHoleCircle.html
+++ b/wiki/fr/TechDraw_ExtensionHoleCircle.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionHoleCircle/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionHoleCircle&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_ExtensionHoleCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Erg&auml;nzungLochkreis (78% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_ExtensionHoleCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungLochkreis (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionHoleCircle.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionHoleCircle (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionHoleCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linee d'asse Viti (78% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_ExtensionHoleCircle.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Rozszerzenie Dodaj osie otwor&oacute;w w okr&#281;gu (78% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../pl/TechDraw_ExtensionHoleCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj osie otwor&oacute;w w okr&#281;gu (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCircleCenterLines.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">Axes de centrage</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionThreadHoleSide.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>
@@ -11,7 +11,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -22,7 +21,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; Axes de centrage des trous/vis
+<td class="ctEven">TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; Axes de centrage des trous/vis
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -51,7 +50,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Axes de centrage de trous/vis</b> ajoute des axes de centrage &agrave; des cercles dispos&eacute;s sur une circonf&eacute;rence.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionHoleCircleExample.png&amp;filetimestamp=20210925075043&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionHoleCircleExample.png" decoding="async" width="400" height="170" class="mw-file-element" data-file-width="693" data-file-height="294"></a></span>
@@ -115,34 +113,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111112226
+Cached time: 20260118101840
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.169 seconds
-Preprocessor visited node count: 348/1000000
+CPU time usage: 0.065 seconds
+Real time usage: 0.125 seconds
+Preprocessor visited node count: 347/1000000
 Post&#8208;expand include size: 25773/2097152 bytes
 Template argument size: 10186/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1296/5000000 bytes
+Unstrip post&#8208;expand size: 1306/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.528      1 -total
- 43.44%   15.435      1 Template:TechDraw_Tools_navi/fr
- 31.20%   11.084      2 Template:Navigation_menu_2
- 16.22%    5.762      2 Template:Docnav/fr
- 12.61%    4.481      1 Template:Userdocnavi/fr
-  8.55%    3.037      1 Template:MenuCommand
-  7.90%    2.807      1 Template:GuiCommand/fr
-  4.83%    1.716      1 Template:Button
-  4.76%    1.690      1 Template:Caption
+100.00%   18.856      1 -total
+ 33.04%    6.230      1 Template:TechDraw_Tools_navi/fr
+ 23.55%    4.441      2 Template:Navigation_menu_2
+ 15.33%    2.890      1 Template:Userdocnavi/fr
+ 13.67%    2.577      2 Template:Docnav/fr
+ 13.49%    2.543      1 Template:GuiCommand/fr
+  7.84%    1.479      1 Template:Caption
+  6.75%    1.273      1 Template:Button
+  6.75%    1.273      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277658-0!canonical and timestamp 20260111112226 and revision id 1733278. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277658-0!canonical and timestamp 20260118101840 and revision id 1740154. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
