--- a/wiki/fr/TechDraw_ExtensionHoleCircle.html
+++ b/wiki/fr/TechDraw_ExtensionHoleCircle.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionHoleCircle/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionHoleCircle&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionHoleCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungLochkreis (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionHoleCircle.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionHoleCircle (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionHoleCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linee d'asse Viti (78% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionHoleCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj osie otwor&oacute;w w okr&#281;gu (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -58,14 +58,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez sp&eacute;cifier les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez trois cercles ou plus formant un motif circulaire.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionHoleCircle.svg&amp;filetimestamp=20241126213023&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionHoleCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Axes de centrage des trous/vis</a></span>.</li>
-<li>S&eacute;lectionnez la commande <b>TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionHoleCircle.svg&amp;filetimestamp=20241126213023&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionHoleCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axes de centrage des trous/vis</b> &agrave; partir du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionHoleCircle.svg&amp;filetimestamp=20241126213023&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionHoleCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axes de centrage des trous/vis</b> du menu.</li></ul></li>
 <li>Les axes de centrage sont ajout&eacute;es.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -113,34 +111,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118101840
+Cached time: 20260118101946
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.065 seconds
-Real time usage: 0.125 seconds
-Preprocessor visited node count: 347/1000000
+CPU time usage: 0.068 seconds
+Real time usage: 0.096 seconds
+Preprocessor visited node count: 346/1000000
 Post&#8208;expand include size: 25773/2097152 bytes
 Template argument size: 10186/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1306/5000000 bytes
+Unstrip post&#8208;expand size: 1310/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.856      1 -total
- 33.04%    6.230      1 Template:TechDraw_Tools_navi/fr
- 23.55%    4.441      2 Template:Navigation_menu_2
- 15.33%    2.890      1 Template:Userdocnavi/fr
- 13.67%    2.577      2 Template:Docnav/fr
- 13.49%    2.543      1 Template:GuiCommand/fr
-  7.84%    1.479      1 Template:Caption
-  6.75%    1.273      1 Template:Button
-  6.75%    1.273      1 Template:MenuCommand
+100.00%   17.026      1 -total
+ 33.53%    5.708      1 Template:TechDraw_Tools_navi/fr
+ 25.50%    4.341      2 Template:Navigation_menu_2
+ 17.80%    3.031      1 Template:Userdocnavi/fr
+ 15.88%    2.703      2 Template:Docnav/fr
+ 11.41%    1.942      1 Template:GuiCommand/fr
+  7.02%    1.196      1 Template:Caption
+  5.83%    0.992      1 Template:MenuCommand
+  5.76%    0.980      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277658-0!canonical and timestamp 20260118101840 and revision id 1740154. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277658-0!canonical and timestamp 20260118101946 and revision id 1740156. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
