--- a/wiki/fr/TechDraw_ExtensionHoleCircle.html
+++ b/wiki/fr/TechDraw_ExtensionHoleCircle.html
@@ -54,7 +54,7 @@
 <p>L'outil <b>TechDraw Axes de centrage de trous/vis</b> ajoute des axes de centrage &agrave; des cercles dispos&eacute;s sur une circonf&eacute;rence.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionHoleCircleExample.png&amp;filetimestamp=20210925075043&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionHoleCircleExample.png" decoding="async" width="400" height="170" class="mw-file-element" data-file-width="693" data-file-height="294"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, un motif circulaire avec des axes de centrage</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, un motif circulaire avec des axes de centrage</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -111,15 +111,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118101946
+Cached time: 20260118102001
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.096 seconds
+CPU time usage: 0.099 seconds
+Real time usage: 0.144 seconds
 Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 25773/2097152 bytes
-Template argument size: 10186/2097152 bytes
+Post&#8208;expand include size: 25775/2097152 bytes
+Template argument size: 10187/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -127,18 +127,18 @@ Unstrip post&#8208;expand size: 1310/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.026      1 -total
- 33.53%    5.708      1 Template:TechDraw_Tools_navi/fr
- 25.50%    4.341      2 Template:Navigation_menu_2
- 17.80%    3.031      1 Template:Userdocnavi/fr
- 15.88%    2.703      2 Template:Docnav/fr
- 11.41%    1.942      1 Template:GuiCommand/fr
-  7.02%    1.196      1 Template:Caption
-  5.83%    0.992      1 Template:MenuCommand
-  5.76%    0.980      1 Template:Button
+100.00%   35.073      1 -total
+ 29.53%   10.358      1 Template:TechDraw_Tools_navi/fr
+ 18.64%    6.539      2 Template:Navigation_menu_2
+ 17.56%    6.158      1 Template:Userdocnavi/fr
+ 17.07%    5.988      1 Template:GuiCommand/fr
+ 13.26%    4.652      2 Template:Docnav/fr
+  7.93%    2.783      1 Template:Caption
+  6.24%    2.188      1 Template:Button
+  5.57%    1.953      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277658-0!canonical and timestamp 20260118101946 and revision id 1740156. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277658-0!canonical and timestamp 20260118102001 and revision id 1740158. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
