--- a/wiki/Macro_FCCircularText.html
+++ b/wiki/Macro_FCCircularText.html
@@ -1,9 +1,9 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCCircularText</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+FCCircularText&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (93% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (34% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
+<li><a href="es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (33% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CircularText (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (96% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (95% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: FCCircularText (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -262,9 +262,9 @@ If the command is not used in the option chosen, it will be grayed out.
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="index.php?title=FCCircularText_10.png&amp;filetimestamp=20200601153053&amp;.html" class="mw-file-description"><img src="File/FCCircularText_10.png" decoding="async" width="490" height="261" class="mw-file-element" data-file-width="490" data-file-height="261"></a><figcaption></figcaption></figure>
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10.0 mm  <span typeof="mw:File"><a href="index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Radius of circle</b>&nbsp;: Radius of the circle. (Default 10)</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">2.0 mm  <span typeof="mw:File"><a href="index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Size character</b>&nbsp;: Character height. (Default 2)</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0 deg  <span typeof="mw:File"><a href="index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Begin angle</b>&nbsp;: Starting angle of the first character in the circle. (Default 0 &deg;)</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0 deg  <span typeof="mw:File"><a href="index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Begin angle</b>&nbsp;: Starting angle of the first character in the circle. (Default 0&deg;)</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">360 deg  <span typeof="mw:File"><a href="index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>End angle</b>&nbsp;: Angle end of the last character of the text. (Default 360)</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10.0 deg  <span typeof="mw:File"><a href="index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Correction angle</b>&nbsp;: Character correction angle to make it tangent to the circle. (Default 10 &deg;)</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10.0 deg  <span typeof="mw:File"><a href="index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Correction angle</b>&nbsp;: Character correction angle to make it tangent to the circle. (Default 10&deg;)</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0.15 mm  <span typeof="mw:File"><a href="index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Correction radius</b>&nbsp;: Fixed the radius of the circle characters (optional). (Default 0.15)</li>
 <li class="mw-empty-elt">
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Extrude Char</b><span></span></span>&nbsp;: Checkbox extrusion characters. (Inactive Default)</li>
@@ -916,12 +916,12 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117215848
+Cached time: 20260118102048
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.332 seconds
-Real time usage: 0.394 seconds
+CPU time usage: 0.340 seconds
+Real time usage: 0.370 seconds
 Preprocessor visited node count: 1762/1000000
 Post&#8208;expand include size: 39398/2097152 bytes
 Template argument size: 12093/2097152 bytes
@@ -932,19 +932,19 @@ Unstrip post&#8208;expand size: 65819/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  187.741      1 -total
-  3.79%    7.117      1 Template:Draft_Tools_navi
-  2.46%    4.626      2 Template:Navigation_menu_2
-  2.14%    4.014      3 Template:ColoredText
-  1.93%    3.622      7 Template:RadioButton
-  1.90%    3.575     10 Template:CheckBox
-  1.90%    3.570      6 Template:SpinBox
-  1.79%    3.351     10 Template:Code
-  1.64%    3.079      1 Template:Userdocnavi
-  1.56%    2.929      1 Template:Caption
+100.00%  179.098      1 -total
+  2.42%    4.338      1 Template:Draft_Tools_navi
+  2.28%    4.075      2 Template:Navigation_menu_2
+  1.85%    3.311     10 Template:Code
+  1.27%    2.276      1 Template:Userdocnavi
+  1.26%    2.249     10 Template:CheckBox
+  1.16%    2.083      6 Template:SpinBox
+  1.14%    2.037      7 Template:RadioButton
+  1.12%    2.009      1 Template:Macro
+  1.05%    1.888      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260117215848 and revision id 1739543. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260118102054 and revision id 1740159. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
